infra/k8s-beta/playout.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: playout
  namespace: beta
spec:
  serviceName: playout
  selector:
    matchLabels:
      app: playout
  template:
    metadata:
      annotations:
        co.elastic.logs/json.add_error_key: "true"
        co.elastic.logs/json.overwrite_keys: "true"
        co.elastic.logs/json.keys_under_root: "true"
      labels:
        app: playout
    spec:
      containers:
      - name: playout
        image: frikanalen/playout-v2:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Oslo
          type: File
