infra/k8s-beta/002-toches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toches
  namespace: beta
spec:
  selector:
    matchLabels:
      app: toches
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: toches
    spec:
      containers:
      - name: toches
        image: frikanalen/toches
        imagePullPolicy: Always
        ports:
          - name: caspar
            containerPort: 5500
            protocol: UDP
          - name: web
            containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: toches
  name: toches
  namespace: beta
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: toches
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-apiv2-prefix
  namespace: beta
spec:
  stripPrefix:
    prefixes:
      - /api/v2/
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: toches
  namespace: beta
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`beta.frikanalen.no`) && PathPrefix(`/api/v2`)
    kind: Rule
    middlewares:
      - name: strip-apiv2-prefix
        namespace: beta
    services:
    - name: toches
      kind: Service
      scheme: http
      port: 80
