infra/k8s-beta/schedule.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-www
  namespace: beta
spec:
  redirectRegex:
    permanent: true
    regex: ^https://www.frikanalen.no/(.*)
    replacement: https://frikanalen.no/${1}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: epgxml-prefix
  namespace: beta
spec:
  addPrefix:
    prefix: /epg
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: toches-xmltv
  namespace: beta
spec:
  entryPoints: 
    - websecure
  routes:
  - match: (Host(`frikanalen.no`) || Host(`www.frikanalen.no`)) && PathPrefix(`/xmltv`)
    priority: 1000
    kind: Rule
    middlewares:
      - name: strip-www
        namespace: beta
      - name: epgxml-prefix
        namespace: beta
    services:
    - kind: Service
      name: toches
      scheme: http
      port: 80
  tls:
    certResolver: default
